--- a/dev/scss/components/_container.scss
+++ b/dev/scss/components/_container.scss
@@ -3,7 +3,6 @@
 
 //mixin.basic-box($display, $flex-direction, $align, $padding, $width, $height, $border-radius, $background-color)
 
-
 //login and signup
 .container-login {
     @include mixins.basic-box(flex, column, center, 1.5rem 1rem, 466px, auto, 0.75rem, vars.$clr-white);
@@ -15,16 +14,11 @@
     background: vars.$clr-white;
     width: 31rem;
 
-    //media-query
     @include mixins.respond-to(vars.$phone) {
         border-radius: 0.75rem;
         background: vars.$clr-white;
         max-width: 21.5rem;
     }
-}
-
-.container-item {
-    @include mixins.basic-box(flex, row, flex-start, 0rem, 47.5rem, 3.5rem, none, none);
 }
 
 .container-pass-big {
@@ -41,16 +35,23 @@
 height: 203px;
 }
 
-
 //recipes
 .recipes-container {
-    width: 90%;
+    width: 94%;
     right: 0;
-    margin-left: 110px;
+    margin-left: 55px;
 
     @include mixins.respond-to(vars.$phone) {
         margin-left: 1.3rem;
         width: 324px;
+    }
+}
+
+.recipes-details {
+    margin-left: 2.3rem;
+    @include mixins.respond-to(vars.$phone) {
+        margin-left: 1.3rem;
+        width: 100%;
     }
 }
 
@@ -60,11 +61,9 @@ height: 203px;
     padding: 0px;
     min-width: 336px;
     max-height: 305px;
-    position: relative;
     overflow: hidden;
     display: flex;
     flex-direction: column;
-
 }
 
 .card-recipe-img {
@@ -80,7 +79,7 @@ height: 203px;
 }
 
 
-//top recipe
+//top recipes
 .card-top-recipe {
     display: flex;
     flex-direction: row;
@@ -118,10 +117,10 @@ height: 203px;
 
 //user profile
 .profile-container {
-    width: 100%;
+    width: 97%;
     display: flex;
     flex-direction: row;
-    margin: auto;
+    margin-left: 3rem;
 
     @include mixins.respond-to(vars.$phone) {
         margin-left: 0;
@@ -138,12 +137,12 @@ height: 203px;
     margin-top: 50px;
     gap: 32px;
     width: 364px;
-    height: 860px;
+    height: 660px;
     background-color: vars.$clr-orange-50;
 
     @include mixins.respond-to(vars.$phone) {
         width: 100%;
-        height: 940px;
+        height: 752px;
         margin-top: 0;
         color: vars.$clr-white;
         background-color: vars.$clr-orange-300;
@@ -170,13 +169,6 @@ height: 203px;
         width: 344px;
         height: 234px;
         margin-bottom: 30px;
-    }
-}
-
-.edit-container {
-    @include mixins.respond-to(vars.$phone) {
-        display: flex;
-        flex-direction: column;
     }
 }
 
@@ -217,14 +209,9 @@ height: 203px;
     }
 
     .detail-mobile {
-        width: 95%;
+        width: 100%;
         right: 0;
     }
-
 }
 
-.btn-container {
-    width: 1000px;
-    margin-left: 580px;
-}
 
