Placed the main.css in dist/css as the prepos didn't

--- a/dev/scss/components/_media.scss
+++ b/dev/scss/components/_media.scss
@@ -62,7 +62,7 @@
 }
 
 .admin-background {
-    background-image: url("././../dist/imgs/background.png");
+    background-image: url("../imgs/background.png");
 }
 
 .imagotipo-responsive {
