--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -24,12 +24,24 @@ body {
     justify-content: flex-end;
 }
 
-.overflow {
-    overflow: hidden;
-    text-overflow: ellipsis;
+.overflow-card {
     display: -webkit-box;
     -webkit-line-clamp: 2;
-    /* number of lines to show */
-    line-clamp: 2;
     -webkit-box-orient: vertical;
-}
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-height: 3em; // Ajusta la altura máxima según el número de líneas y el tamaño del texto
+    white-space: normal; // Puedes ajustar según tus necesidades
+  }
+
+  .overflow {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin-left: 1rem;
+    margin-right: 0.8rem;
+  }
+  
+  
